Move site to docs folder

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -3,6 +3,8 @@ theme:
   name: 'material'
   palette:
     primary: 'blue'
+docs_dir: 'entries'
+site_dir: 'docs'
 extra:
   social:
     - type: 'github'
